change:  - recode url conversion part  - adjust code to SecurityManger presency - we required some adds in code to isolate permissions. This will rquired full run once we make TCK green without SM.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/jain-slee@5761 bf0df8d0-2c1f-0410-b170-bd30377b63dc